atualizei a imagem da capivara

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             href="https://youtu.be/QUqCWkPlLLc?t=104">   
                 <img    
                 title= "La Capibarista Equilibrara"        
-                src="E:\Estudo Dev\Rocketseat\nlw\assets\capigamer.jpg"
+                src="https://pbs.twimg.com/media/E6Sh8PxXsAYK8Dd.jpg"
                 alt="fotinho da Lola, la capivara equilibrista"/>
             </a>    
             </div>
