fixed capybara image off center & updated preview

--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
      
         <header> <!-- fotinho da Lola, la capivara equilibrista-->
             <div class="capiGamer hover">
-            <a
-            target="_blank" 
-            href="https://youtu.be/QUqCWkPlLLc?t=104">   
-                <img    
+                <a target="_blank" href="https://www.youtube.com/watch?v=QUqCWkPlLLc&t=104s">
+                <img 
                 title= "La Capibarista Equilibrara"        
                 src="https://pbs.twimg.com/media/E6Sh8PxXsAYK8Dd.jpg"
                 alt="fotinho da Lola, la capivara equilibrista"/>
-            </a>    
+                </a>
             </div>
           
         </header>
